# intelligent-reminder

./: README.md  pyproject.toml
intelligent-reminder/: .env  Dockerfile  aws_client.py  config.py  logger.py  main.py
intelligent-reminder/app/modules/: ai_client.py  api.py  constants.py  models.py  repositories.py  services.py
