[tool.poetry]
name = "intelligent-reminder"
version = "0.1.0"
description = "Intelligent Reminder Application"
authors = ["Your Name <your.email@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.104.0"
uvicorn = "^0.24.0"
python-multipart = "^0.0.6"
websockets = "^12.0"
httpx = "^0.25.0"
pandas = "^2.1.0"
twilio = "^8.10.0"
pydantic-settings = "^2.0.3"
boto3 = "^1.34.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = "^23.10.1"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"